--- a/src/app/views/security/user-login/user-login.component.html
+++ b/src/app/views/security/user-login/user-login.component.html
@@ -48,7 +48,7 @@
                 [checked]="showPassword"
                 (click)="$event.stopPropagation"
                 (change)="toggleShowPassword()"
-                class="mat-checkbox-login">
+                class="mat-checkbox-warning">
                 Show password
               </mat-checkbox>
 
