--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -11,35 +11,32 @@ fieldset {
   border: 0;
 }
 
-.disabled {
-  pointer-events: none;
-  cursor: default;
-  opacity: 0.7;
+.section-title {
+  color: $form-title-color;
+  border-bottom: $form-title-border;
+  margin: 0.5rem 8px 0.5rem 0;
 }
 
-.form-container {
-  padding: 0 10px 0 10px;
-}
+form.form-section {
+  label {
+    display: block;
+    width: 100%;
+    margin: auto;
+    line-height: 1rem;
+    color: $control-label-color;
+    font-size: 8pt;
+    font-weight: 600;
+  }
 
-.form-footer {
-  margin-top: 14px;
-  border-top: 1px solid $border-color;
-}
-
-.form-errors {
-  color: $warning-color;
-  font-size: 10pt;
-  padding: 8pt;
+  button {
+    margin-right: 8px;
+  }
 }
 
 form.submitted input.ng-invalid,
 form.submitted textarea.ng-invalid,
 form.submitted select.ng-invalid {
   border-left: 5px solid $warning-color;
-}
-
-.invalid-control {
-  border-left: 5px solid $warning-color !important;
 }
 
 form.submitted .inline-error {
@@ -53,36 +50,38 @@ form.submitted .inline-error {
   border-bottom: $form-border-bottom;
 }
 
-.border-top > td {
+.disabled {
+  pointer-events: none;
+  cursor: default;
+  opacity: 0.7;
+}
+
+.form-container {
+  padding: 5px;
+  margin: 3px;
+  top: 0;
+  z-index: 105;
+}
+
+.form-footer {
+  margin-top: 14px;
   border-top: 1px solid $border-color;
 }
 
-// ToDo: to be deprecated
-
-table.form-section {
-  margin-bottom: 12pt;
+.form-errors {
+  color: $warning-color;
+  font-size: 10pt;
+  padding: 8pt;
 }
 
-table.form-section td {
-  color: $text-color;
-  white-space: nowrap;
-  vertical-align: text-top;
-  font-size: 9pt;
+.invalid-control {
+  border-left: 5px solid $warning-color  !important;
 }
 
-table.form-section .top {
-  vertical-align: top;
-}
-
-.form-container-text {
-  color: $form-color;
-  font-weight: $font-weight-command;
-}
-
-table.form-section .form-section-title {
+.title-section {
   color: $form-title-color;
   border-bottom: $form-title-border;
-  font: $control-font;
+  margin: 0.5rem 8px 0.5rem 0;
 }
 
 .pr-1 {
@@ -96,31 +95,4 @@ table.form-section .form-section-title {
 .grid-text-item {
   padding-left: 1rem;
   font-size: 8pt;
-}
-
-.section-title {
-  color: $form-title-color;
-  border-bottom: $form-title-border;
-  margin: 0.5rem 8px 0.5rem 0;
-}
-
-form.form-section {
-  label {
-    display: block;
-    width: 100%;
-    margin: auto;
-    line-height: 1rem;
-    color: #2c3942;
-    font-size: 10.6px;
-    font-weight: 700;
-  }
-
-  button {
-    margin-right: 8px;
-  }
-}
-
-.tab-container {
-  margin: auto 8px 8px auto;
-  width: calc(100% - 9px);
 }
