--- a/src/app/views/registration/instrument-book-entries/instrument-book-entry-list.component.html
+++ b/src/app/views/registration/instrument-book-entries/instrument-book-entry-list.component.html
@@ -1,11 +1,11 @@
 <div class="section-title">Registro del documento en libros</div>
 
-<div class="tab-container">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
+<div class="tab-container mat-elevation-z1">
+  <table mat-table [dataSource]="dataSource">
 
     <ng-container matColumnDef="stampMedia">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let row" class="text-align-center padding-icon">
+      <td mat-cell *matCellDef="let row" class="column-action">
         <mat-icon *ngIf="row.stampMedia.url"
           (click)="printBookEntryStampMedia(row)"
           title="Sello partida">
@@ -41,7 +41,7 @@
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let row" class="text-align-center padding-icon">
+      <td mat-cell *matCellDef="let row" class="column-action">
         <mat-icon
           (click)="removeBookEntry(row)"
           title="Eliminar registro">
@@ -54,7 +54,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <div *ngIf="dataSource?.data.length === 0" class="text-not-found">
+  <div *ngIf="dataSource?.data.length === 0" class="text-not-found" [style.paddingTop.rem]="0.5">
     <p>No se encontraron registros.</p>
   </div>
 
