--- a/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
+++ b/src/app/views/transactions/transaction-editor/requested-services/requested-service-list.component.html
@@ -1,7 +1,7 @@
 <div class="section-title">Conceptos</div>
 
-<div class="tab-container">
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z1">
+<div class="tab-container mat-elevation-z1">
+  <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef> # </th>
       <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
@@ -40,7 +40,7 @@
     </ng-container>
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> </th>
-      <td mat-cell *matCellDef="let row" class="text-align-center padding-icon">
+      <td mat-cell *matCellDef="let row" class="column-action">
         <mat-icon (click)="removeService(row)">delete</mat-icon>
       </td>
     </ng-container>
@@ -49,7 +49,7 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <div *ngIf="dataSource.data.length === 0" class="text-not-found">
+  <div *ngIf="dataSource.data.length === 0" class="text-not-found" [style.paddingTop.rem]="0.5">
     <p>No se han agregado conceptos.</p>
   </div>
 
