--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -30,7 +30,7 @@
 
   .card-title {
     flex: 1 1 auto;
-    color: $primary-color;
+    color: $title-color;
     font-size: 14pt;
     font-weight: 600;
   }
@@ -59,9 +59,10 @@
   }
 
   .card-hint {
-    color: $secondary-color;
+    color: $secondary-color-semi-light;
     font-size: 9pt;
     font-weight: 400;
+    margin-top: 0.5em;
   }
 }
 
@@ -80,13 +81,13 @@
 }
 
 .card-header-raised {
-  border-bottom: 4px solid $primary-color;
+  border-bottom: 4px solid $title-border-color;
 
   @include raised-header;
 }
 
 .card-header-flat {
-  border-bottom: 4px solid $primary-color;
+  border-bottom: 4px solid $title-border-color;
 }
 
 .card-shadow {
