--- a/src/styles/general-styles.scss
+++ b/src/styles/general-styles.scss
@@ -25,7 +25,7 @@ table td:last-child {
 }
 
 @mixin input-button-settings {
-  font: $control-font;
+  font: $button-font;
   text-transform: uppercase;
   border: $button-border;
   height: $button-height;
@@ -88,7 +88,7 @@ button.btn {
 
 button.btn:hover {
   background-color: $button-selected-color;
-  color: $text-color;
+  color: $text-color-dark;
   transition: 0.3s ease-out;
 }
 
@@ -137,6 +137,74 @@ button.btn-login {
 
 button.btn-login:hover {
   background-color: $layout-secondary-color-dark;
+  transition: 0.3s ease-out;
+}
+
+button.btn-base {
+  @include input-button-settings;
+
+  text-transform: none;
+  background-color: transparent;
+  color: $text-color;
+  min-width: $button-height;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .mat-icon {
+    color: $icon-color;
+  }
+}
+
+button.btn-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $button-color;
+  border: $control-border;
+  width: $button-height;
+  height: $button-height;
+
+  .mat-icon {
+    color: $icon-color;
+  }
+}
+
+button.btn-icon-action {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: $action-color;
+  width: $button-height;
+  height: $button-height;
+  min-width: $button-height;
+
+  .mat-icon {
+    color: $white;
+  }
+}
+
+button.btn-base:hover {
+  background-color: $button-selected-color;
+  color: $text-color-dark;
+  transition: 0.3s ease-out;
+
+  .mat-icon {
+    color: $icon-color-dark;
+  }
+}
+
+button.btn-icon:hover {
+  background-color: $selected-control-background-color;
+  transition: 0.3s ease-out;
+
+  .mat-icon {
+    color: $icon-color-dark;
+  }
+}
+
+button.btn-icon-action:hover {
+  background-color: $action-selected-color;
   transition: 0.3s ease-out;
 }
 
@@ -203,6 +271,16 @@ input:focus {
   border: $selected-control-border;
 }
 
+input::placeholder {
+  color: $border-color-dark;
+}
+
+.input-search-container {
+  height: $control-height;
+  width: 100%;
+  margin-bottom: 4px;
+}
+
 .input-icon-container {
   position: relative;
   height: $control-height;
@@ -266,8 +344,13 @@ textarea:focus {
 }
 
 .text-not-found {
+  font-size: 1em;
   text-align: center;
   padding: 1rem;
+}
+
+.text-small-text {
+  font-size: 0.75em;
 }
 
 .left {
@@ -287,9 +370,44 @@ textarea:focus {
   white-space: normal !important;
 }
 
+.info-text {
+  color: $primary-color;
+  font-weight: 600;
+}
+
 .warning-text {
   color: $warning-color;
   font-weight: 600;
+}
+
+.instruction-text {
+  font-size: 0.75em;
+  text-align: center;
+  padding: 1rem;
+  background: $control-disabled-background;
+  margin-right: 8px;
+}
+
+.bold-text {
+  font-weight: 600;
+}
+
+.error-indicator-text {
+  color: $warning-color;
+  text-decoration: underline;
+}
+
+a.error-indicator-text:hover {
+  color: darken($warning-color, 4%);
+}
+
+.warning-indicator-text {
+  color: $title-color;
+  text-decoration: underline;
+}
+
+a.warning-indicator-text:hover {
+  color: darken($title-color, 4%);
 }
 
 .remove-min-width {
@@ -512,4 +630,44 @@ pre {
   font-family: $font-family;
   white-space: pre;
   margin: 0.5em 0;
+}
+
+.hidden {
+  display: none;
+}
+
+ul.info-list {
+  padding: 0 1.5em;
+
+  li:not(:last-child) {
+    padding-bottom: 1em;
+  }
+}
+
+// card-info
+
+.card-info-container {
+  padding: 16px;
+}
+
+.card-info {
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+  background-color: #fafafa;
+  padding: 16px;
+  margin-bottom: 1rem;
+  border-radius: 3px;
+}
+
+.card-info-title {
+  display: block;
+  margin-bottom: 6px;
+  color: $primary-color;
+  font-size: 12pt;
+  font-weight: 600;
+}
+
+.card-info-hint {
+  color: #808080;
+  font-size: 9pt;
+  font-weight: 400;
 }
